cmake_minimum_required(VERSION 3.2)
project(AlgorithmPractice)

set(CMAKE_BUILD_TYPE DEBUG)

# C1_basic_algorithm
add_subdirectory( C1_basic_algorithm/C1_1_Sort )
add_subdirectory( C1_basic_algorithm/C1_2_BinarySearch )
add_subdirectory( C1_basic_algorithm/C1_3_HighPrecision )
add_subdirectory( C1_basic_algorithm/C1_4_PrefixSumAndDifference )
add_subdirectory( C1_basic_algorithm/C1_5_DoublePointer )
add_subdirectory( C1_basic_algorithm/C1_6_BitOperation )
add_subdirectory( C1_basic_algorithm/C1_7_Discretization )
add_subdirectory( C1_basic_algorithm/C1_8_IntervalConbination )

